--- a/Handouts/Assignment.html
+++ b/Handouts/Assignment.html
@@ -1,40 +1,39 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Assignment Help & Tech Project Services | CampusXchange</title>
+<meta name="description" content="CampusXchange offers expert support for programming assignments, AI/ML models, academic projects, and technical reports. Fast, reliable, and plagiarism-free.">
+<meta name="keywords" content="assignment help, programming assignment, AI project help, ML model support, web development project, technical assignment service, CampusXchange services">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" href="../Style.css" type="text/css">
-<link rel="stylesheet" href="../Styles/Assignment.css" type="text/css">
+<link rel="stylesheet" href="../style.css" type="text/css">
+<link rel="stylesheet" href="../styles/assignment.css" type="text/css">
 <!-- cdns-->
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />  
+ <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 <!--favicon ------------------------------------------------------------------------------>
 <link rel="apple-touch-icon" sizes="180x180" href="../favicon_io/apple-touch-icon.png">
 <link rel="icon" type="image/png" sizes="32x32" href="../favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="../favicon_io/favicon-16x16.png">
-<link rel="manifest" href="../favicon_io/site.webmanifest">
 </head>
 <body>
   <!-- animated cursor ------------------->
- <div class="cursor">
-  
- </div>
- <script>
-  const cursor=document.querySelector(".cursor");
-  document.addEventListener("mousemove",(e)=>
-{
-  let x=e.pageX;
-  let y=e.pageY;
-  cursor.style.top = y+"px";
-  cursor.style.left = x+"px";
-});
- </script>
+ <div class="cursor"></div>
 <!-- animated cursor end ---------------->
    <!--Assignment page Header and navbar ----------------------------------------------------------------------------------------->
      <header>
-  <div class="Logo"><img src="../Images/L.svg" title="CampusXchange Logo"></div>
+  <div class="Logo"><img src="../Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
   </header>
 <div class="topnav" id="myTopnav">
   <a href="../Index.html" class="active">Home</a>
+   <div class="dropdown">
+    <button class="dropbtn">Services
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="../Services/Webdevelopment.html">Website Development</a>
+      <a href="../Services/SEO.html">SEO</a>
+    </div>
+  </div>
    <div class="dropdown">
     <button class="dropbtn">Handouts
       <i class="fa fa-caret-down"></i>
@@ -44,64 +43,208 @@
       <a href="Blog.html">Blogs</a>
       <a href="Assignment.html" style="background-color: #555;">Programming Assignment</a>
     </div>
-  </div> 
-   <div class="dropdown">
-    <button class="dropbtn">Services
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="../Services/Webdevelopment.html">Website Development</a>
-      <a href="../Services/SEO.html">SEO</a>
-    </div>
-  </div> 
+  </div>
   <a href="../Internship.html">Mentorship & Internship</a>
   <a href="../About.html">About</a>
   <a href="../Lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
- <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
+ <a href="#" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <br>
- <!-- Assignment section  ------------------------------------------------------------------------------------------------>
-   
-       <section  id="Assignment">
-      <h1>For Programing Lab Assignment Help ?</h1>
-      <p>Click on following buttons and connect with our team .. Our team give all Assignment which you want ??</P> 
-    <!-- <a href="Authetication.php" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-triangle-right"></span>Login</a> -->
-     <br>
-     <br>
+<main>
+  <div class="marqueebox">
+  <div class="marquee">
 
-                  <a href="https://wa.me/8252399138?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20C%20Programming%20Assignment" target="blank"><span class="glyphicon glyphicon-triangle-right"></span>C Programing</a>
-                           <a href="https://wa.me/6201962856?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20WEB%20Technology%20Assignment" target="blank"><span class="glyphicon glyphicon-triangle-right"></span>WebTechnology</a>
-                                    <a href="https://wa.me/8340179575?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20DSA%20Using%20C++%20Assignment" target="blank"><span class="glyphicon glyphicon-triangle-right"></span>DSA using C++</a>
-                                             <a href="https://wa.me/9341218494?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20DBMS%20Assignment" target="blank"><span class="glyphicon glyphicon-triangle-right"></span>DBMS</a>
-                                                   <a href="https://wa.me/919155726625?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20PHP%20Assignment" target="blank"><span class="glyphicon glyphicon-triangle-right"></span>PHP</a>
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" >
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg">
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/bootstrap/bootstrap-original.svg" >
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/xml/xml-original.svg" />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg"  />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/java/java-original.svg"  />
+            <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/cplusplus/cplusplus-original.svg"  />
+
+
+  </div>
+  </div>
+  <br>
+
+ <!-- Assignment section  ------------------------------------------------------------------------------------------------>
+
+<section class="block " id="Assignment">
+  <h1>Need Help with Programming or Tech Lab Assignments?</h1>
+  <p>Click on a subject below and instantly connect with our team via WhatsApp. We'll deliver your assignment just the way you want it!</p>
+<br>
+  <div class="assignment-buttons">
+    <a href="https://wa.me/8252399138?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20C%20Programming%20Assignment" target="_blank">C Programming</a>
+
+    <a href="https://wa.me/6201962856?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20WEB%20Technology%20Assignment" target="_blank">Web Technology</a>
+
+    <a href="https://wa.me/8340179575?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20DSA%20Using%20C++%20Assignment" target="_blank">DSA using C++</a>
+
+    <a href="https://wa.me/9341218494?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20DBMS%20Assignment" target="_blank">DBMS</a>
+
+    <a href="https://wa.me/919155726625?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20share%20the%20PHP%20Assignment" target="_blank">PHP</a>
+  </div>
+  <br>
+   <a href="https://wa.me/919155726625?text=Hey%20CampusXchange%20Team%20can%20you%20Please%20work%20on%20my%20Assignment" target="_blank">Request for custom Assignments👋</a>
+
+</section>
+
+  <!-- Assignment section end  ------------------------------------------------------------------------------------------------>
+      <br>
+  <!--Basic project demo section  ------------------------------------------------------------------------------------------------>
+      <section class="block"  id="basic-project">
+      <h2>Some Basic Web Projects</h2>
+      <br>
+      <div class="demoview">
+      <div class="block basic-project-box"><div class="project-photo"><img src="../Images/basicdemoproject/Screenshot 2025-07-26 230413.png" title="Text to Speech Convertor image"/></div><h3>Text to Speech Convertor</h3><span>HTML</span><span>CSS</span><span>JavaScript</span><span>Bootstrap</span><a href="#"><span id="View"><i class="fa-solid fa-eye"></i></span></a><a href="#"><span id="Download"><i class="fa-solid fa-download"></i></span></a></div>
+      <div class="block basic-project-box"><div class="project-photo"><img src="../Images/basicdemoproject/Screenshot 2025-07-26 230423.png" title="Calculator image"/></div><h3>Calculator</h3><span>HTML</span><span>CSS</span><span>JavaScript</span><a href="#"><span id="View"><i class="fa-solid fa-eye"></i></span></a><a href="#"><span id="Download"><i class="fa-solid fa-download"></i></span></a></div>
+      <div class="block basic-project-box"><div class="project-photo"><img src="../Images/basicdemoproject/Screenshot 2025-07-26 230627.png" title="QR Code Generator image"/></div><h3>QR Code Generator</h3><span>HTML</span><span>CSS</span><span>JavaScript</span><a href="#"><span id="View"><i class="fa-solid fa-eye"></i></span></a><a href="#"><span id="Download"><i class="fa-solid fa-download"></i></span></a></div>
+      </div>
+       <h2><button id="Viewbtn" onclick=" viewall()">View All</button></h2>
+      <div class="viewall">
+      <div class="block basic-project-box"><div class="project-photo"><img src="../Images/basicdemoproject/Screenshot 2025-07-26 232537.png" title="Timing Stopwatch image"/></div><h3>Timing Stopwatch</h3><span>HTML</span><span>CSS</span><span>JavaScript</span><span>Bootstrap</span><a href="#"><span id="View"><i class="fa-solid fa-eye"></i></span></a><a href="#"><span id="Download"><i class="fa-solid fa-download"></i></span></a></div>
+      <div class="block basic-project-box"><div class="project-photo"><img src="../Images/basicdemoproject/Screenshot_26-7-2025_23544_127.0.0.1.jpeg" title="Keybord Key Value finder image"/></div><h3>Keybord Key Value finder</h3><span>HTML</span><span>CSS</span><span>JavaScript</span><a href="#"><span id="View"><i class="fa-solid fa-eye"></i></span></a><a href="#"><span id="Download"><i class="fa-solid fa-download"></i></span></a></div>
+      <div class="block basic-project-box"><div class="project-photo"><img src="../Images/basicdemoproject/Screenshot 2025-06-08 024526.png" title="Login & Signup Form image"/></div><h3>Login & Signup Form</h3><span>HTML</span><span>T.CSS</span><span>JavaScript</span><span>PHP</span><a href="#"><span id="View"><i class="fa-solid fa-eye"></i></span></a><a href="#"><span id="Download"><i class="fa-solid fa-download"></i></span></a></div>
+      </div>
+      <h2><button id="Cbtn" onclick="closeall()">Close</button></h2>
     </section>
-     <!-- Assignment section end  ------------------------------------------------------------------------------------------------>
-       <!-- fotter section  --------------------------------------------------------------------------------->
-        <section class="Footer">
- <div class="fbox" id="lastfooter"><br><h2>CampusXchange
- </h2>
-<h3>Our Mission:</h3>
-<p>Our mission is to empower students with the knowledge and skills necessary to succeed in their academic and professional endeavors. At Paramount Coaching, we believe in fostering a strong learning environment that promotes holistic development</p>
+  <!--Basic project demo section end  ------------------------------------------------------------------------------------------------>
+   <br>
+    <!-- descreption cta For My core services ------------------------------------------------------------------------------>
+  <section class="block project-card">
+    <h3>Custom Projects (Built on Request)</h3>
+    <p>
+      Have a unique idea? Want a project that's not copied from YouTube or GitHub? Share your concept and we’ll build it — tailored to your vision. Whether it's a startup prototype, automation script, or interactive dashboard — we turn your thoughts into working code.
+    </p>
+    <ul>
+      <li>Made from scratch, no templates</li>
+      <li>Technologies: HTML, CSS, JS, PHP, Python, React, Django, Flask, etc.</li>
+      <li>Scalable & Extendable (can be used beyond college too!)</li>
+    </ul>
+    <br>
+    <p><strong>Need a project? </strong>Let's build it together — fast, reliable, and submission-ready.</p>
+    <br>
+    <a href="../Services/Webdevelopment.html">Request Your Project Now →</a>
+
+  </section>
+  <!-- descreption cta For My core services ------------------------------------------------------------------------------>
+   <br>
+    <!-- FAQ section ---------------------------------------------------------------------------------->
+    <section class="faq-section">
+  <h2>Frequently Asked Questions</h2>
+
+  <div class="faq">
+    <div class="faq-question"> Are your assignments plagiarism-free?</div>
+    <div class="faq-answer">
+   Yes, all code is handwritten and customized, not copy-pasted from the internet. We make sure each assignment is unique and well-explained so you can understand and use it in your lab file or viva.</div>
+  </div>
+
+  <div class="faq">
+    <div class="faq-question">How fast can I get my assignment?</div>
+    <div class="faq-answer">
+   Most assignments are delivered within 24-48 hours, depending on the number of programs and complexity. Urgent delivery options are also available on request.</div>
+  </div>
+
+  <div class="faq">
+    <div class="faq-question">Will I get help in understanding the code?</div>
+    <div class="faq-answer">
+   Yes! We provide code walkthrough support via chat or call (based on availability) to help you understand the logic before your practical exam or viva.
+
+</div>
+  </div>
+  <div class="faq">
+    <div class="faq-question"> Do you offer live project development for businesses?</div>
+    <div class="faq-answer">
+   Yes, we build real-world web solutions for small businesses, startups, coaching institutes, NGOs, etc. This includes website development, landing pages, admin panels, and more. </div>
+  </div>
+</section>
+<br>
+    <!-- FAQ section  end here---------------------------------------------------------------------------------->
+  <!-- fotter section  --------------------------------------------------------------------------------->
+        <footer class="Footer">
+ <div class="fbox" id="lastfooter"><br>
+  <h3>CampusXchange</h3>
+<p>We are committed to building a dynamic learning ecosystem where learners read and create, build and grow. From expert-curated notes, to insider tips, to realtime tech assignments, and guided internship & mentorship programs, we help you go from theory to doing your life's best work. Whether you're a student who wants to conquer full-stack development, a freelancer who wants to refine SEO skills, or a startup who's looking for web help — CampusXchange is where you can begin and strategize to become smarter.</p>
    <br>
     <hr>
 </div>
-<br>
-     <div  id="quicklinks"><h2>Quick links</h2>
-        <a href="../Index.html">Home</a>      
-        <a href="Notes.html">Notes</a>
-        <a href="Blog.html">Blogs</a>
-        <a href="Assignment.html">Programming Assignment</a>
-        <a href="../Services/Webdevelopment.html">Website Development</a>
-        <a href="../Services/SEO.html">SEO</a>
-        <a href="../Internship.html">Mentorship & Internship</a>
-        <a href="../About.html">About</a>
-        <a href="../Lettalk.html">Let's Talk</a>
-        
+     <h3>Quick Links-</h3>
+     <div  id="quicklinks">
+        <a href="#">Home</a>
+        <a href="#about-section">Notes</a>
+        <a href="#Courses-section">Blogs</a>
+        <a href="#Results-section">Assignment</a>
+        <a href="#Contact-section">Website Development</a>
+        <a href="#Contact-section">SEO</a>
+        <a href="#Contact-section">Internship</a>
+        <a href="#Contact-section">About us</a>
+        <a href="#Contact-section">Let's Talk</a>
+
       </div>
- 
-        </section>  
-        <!-- fotter section end  --------------------------------------------------------------------------------->  
+      <h3>Let's Connect!</h3>
+      <div class="contact">
+        <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-phone"></i></a> &nbsp;+91 9155726625
+        <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-envelope"></i></a> &nbsp;info@campusxchange.com
+        <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-location-dot"></i></a> &nbsp;Kishanganj ,Bihar(855115)
+      </div>
+
+      <div  id="Sociallinks">
+        <a href="#Courses-section" title="Social Platform"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#about-section" title="Social Platform"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="#Results-section" title="Social Platform"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#Contact-section" title="Social Platform"><i class="fa-brands fa-youtube"></i></a>
+
+      </div>
+         <div  id="CopyRight">
+       Copyright ©2025 CampusXchange. All Rights Reserved Designed By CampusXchange Team
+      </div>
+        </footer>
+        <!-- fotter section end here --------------------------------------------------------------------------------->
+
+         <script>
+          function viewall()
+          {
+
+          var a=document.querySelector(".viewall").style.display="block";
+          var b=document.querySelector("#Viewbtn").style.display="none";
+          var c=document.querySelector("#Cbtn").style.display="block";
+          }
+           function closeall()
+          {
+
+          var a=document.querySelector(".viewall").style.display="none";
+          var b=document.querySelector("#Viewbtn").style.display="block";
+          var c=document.querySelector("#Cbtn").style.display="none";
+          }
+
+
+/* assignment FAQ script start here -------------------------------*/
+ document.addEventListener("DOMContentLoaded", () => {
+  const faqs = document.querySelectorAll(".faq");
+
+  faqs.forEach(faq => {
+    faq.querySelector(".faq-question").addEventListener("click", () => {
+      faq.classList.toggle("active");
+
+      const answer = faq.querySelector(".faq-answer");
+      const isVisible = faq.classList.contains("active");
+      answer.style.display = isVisible ? "block" : "none";
+
+      // Close other FAQs
+      faqs.forEach(otherFaq => {
+        if (otherFaq !== faq) {
+          otherFaq.classList.remove("active");
+          otherFaq.querySelector(".faq-answer").style.display = "none";
+        }
+      });
+    });
+  });
+});
+/* assignment FAQ script end here -------------------------------*/
+         </script>
 <script src="../script.js"></script>
 </body>
 </html>
