--- a/Services/Webdevelopment.html
+++ b/Services/Webdevelopment.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+<title>Custom Web Development Services | SEO-Friendly & Responsive Website Design India -CampusXchange</title>
+<meta name="description" content="Get fast, secure, and SEO-optimized websites tailored to your business needs. CampusXchange offers custom web development services, responsive design, and full-stack solutions to help your brand grow online.">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="../Style.css" type="text/css">
+<meta name="keywords" content="Custom web development services , Web application development services , Website design and development services , Responsive Website Design ,SEO-Friendly Website ">
+<link rel="stylesheet" href="../style.css" type="text/css">
+<link rel="stylesheet" href="../styles/webdev.css" type="text/css">
   <!-- cdns-->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!--favicon ------------------------------------------------------------------------------>
@@ -14,26 +18,24 @@
 <body>
 
   <!-- animated cursor ------------------->
- <div class="cursor">
-  
- </div>
- <script>
-  const cursor=document.querySelector(".cursor");
-  document.addEventListener("mousemove",(e)=>
-{
-  let x=e.pageX;
-  let y=e.pageY;
-  cursor.style.top = y+"px";
-  cursor.style.left = x+"px";
-});
- </script>
+ <div class="cursor"></div>
+
 <!-- animated cursor end ---------------->
    <!--Home page Header and navbar ----------------------------------------------------------------------------------------->
      <header>
-  <div class="Logo"><img src="../Images/L.svg" title="CampusXchange Logo"></div>
+  <div class="Logo"><img src="../Images/campusxchange-logo.svg" title="CampusXchange Logo"></div>
   </header>
 <div class="topnav" id="myTopnav">
   <a href="../Index.html" class="active">Home</a>
+   <div class="dropdown">
+    <button class="dropbtn">Services
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <a href="Webdevelopment.html" style="background-color: #555;">Website Development</a>
+      <a href="SEO.html" >SEO</a>
+    </div>
+  </div>
    <div class="dropdown">
     <button class="dropbtn">Handouts
       <i class="fa fa-caret-down"></i>
@@ -43,48 +45,190 @@
       <a href="../Handouts/Blog.html">Blogs</a>
       <a href="../Handouts/Assignment.html">Programming Assignment</a>
     </div>
-  </div> 
-   <div class="dropdown">
-    <button class="dropbtn">Services
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-      <a href="Webdevelopment.html" style="background-color: #555;">Website Development</a>
-      <a href="SEO.html" >SEO</a>
-    </div>
-  </div> 
+  </div>
   <a href="../Internship.html">Mentorship & Internship</a>
   <a href="../About.html">About</a>
   <a href="../Lettalk.html">Let's Talk</a>
     <!--// mobile Togglebar ----------------------------------------------------------------------------------------->
- <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a> 
+ <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="myFunction()">&#9776;</a>
 </div>
 <br>
- <!-- fotter section  --------------------------------------------------------------------------------->
+<main>
+  <!-- first section for better UI or Hero Section start ------------------------------>
+  <section class="block first-webdev-section">
+
+  <video autoplay muted loop playsinline>
+    <source src="../Images/H.mp4" type="video/mp4">
+  </video>
+<div class="overlay-content">
+<div class="maintext">
+ <h1> <div></div>Let's Start Now</h1>
+<P>We don't just build websites — we build digital experiences that perform, impress, and grow with your business.”</P>
+<p>From responsive web design to custom development, our solutions are built to impress, perform, and evolve with your business goals.
+
+</p>
+<br>
+    <a href="#" title="Click here.."><button>Launch with Confidence →</button></a>
+</div>
+</div>
+  </section>
+  <!-- first section for better UI or Hero Section end here------------------------------>
+    <br>
+  <!-- section for what we offer in webdevelopment start  ------------------------------->
+    <section class="block Weoffersection">
+<h2>Our Web Development Offerings</h2>
+<br>
+<div class="offer"> Custom Website Development <p>No templates. No shortcuts. We build fully custom websites from scratch that align with your brand goals and business logic using HTML, CSS, JavaScript,PHP and more</p></div>
+<div class="offer">Front-End & UI Development <p>We create engaging, user-friendly interfaces that deliver a smooth browsing experience using modern frameworks and clean code architecture.</p></div>
+<div class="offer">Website Redesign & Optimization <p>Already have a site? Let us revamp it for speed, security, mobile-responsiveness, and SEO to increase conversions and engagement.</p></div>
+<div class="offer">Landing Page Design <p>High-converting, purpose-driven landing pages for campaigns, events, or product launches.</p></div>
+<div class="offer">Portfolio  Design <p></p></div>
+    </section>
+     <!-- section for what we offer in webdevelopment end here  ------------------------------->
+      <br>
+<section class="block techlang">
+   <h2> Tech Stack We Work With -</h2>
+   <div class="techlangbox"><span>Front-End</span><br><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/html5/html5-original.svg" alt="HTML-logo"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/css3/css3-original-wordmark.svg" alt="CSS-log"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/javascript/javascript-original.svg" alt="JavaScript-logo"> <img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/react/react-original.svg" alt="React-logo"/></div>
+   <div class="techlangbox"><span>Back -End</span><br><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/php/php-original.svg" alt="PHP-logo"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/python/python-original.svg" alt="Python-logo" /><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/nodejs/nodejs-original-wordmark.svg" alt="Node.js-logo" /></div>
+   <div class="techlangbox"><span>Database</span><br><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mysql/mysql-original.svg" alt="MySql-loogo" /><img src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/mongodb/mongodb-original.svg" alt="Mongodb-logo" /></div>
+
+   <div class="techlangbox"><span>Server</span><br><img src="../Images/bluehostLogo.webp"><img src="../Images/HostingerLogo.webp"></div>
+</section>
+<br>
+<section class="block webdevprocess">
+  <h2>Our Process: From Idea to Impact -</h2>
+  <div class="block processbox">Discovery & Requirement Analysis</div>
+  <div class="block processbox">Planning & Wireframing</div>
+  <div class="block processbox">UI/UX & Front-End Development</div>
+  <div class="block processbox">Back-End Development</div>
+  <div class="block processbox">Testing & Qestion Ans.</div>
+  <div class="block processbox">Launch & Deployment</div>
+  <div class="block processbox">Post-Launch Support</div>
+</section>
+<br>
+<section class="block ourstatus">
+<div class="ourstatushero">  <h2>Our Happy Clients "</h2>
+
+<div class="client-slider" id="sliderBox">
+  <div class="clients-images" id="slider">
+    <img src="../Images/P1.png" alt="Image 1">
+    <img src="../Images/P2.png" alt="Image 2">
+    <img src="../Images/P3.png" alt="Image 3">
+    <img src="../Images/P4.png" alt="Image 3">
+    <img src="../Images/P5.png" alt="Image 3">
+  </div>
+</div>
+
+<div class="numbers" id="numberContainer"> </div>
+<br>
+</div>
+</section>
+</main>
+<br>
+  <!-- fotter section  --------------------------------------------------------------------------------->
         <section class="Footer">
- <div class="fbox" id="lastfooter"><br><h2>CampusXchange
- </h2>
-<h3>Our Mission:</h3>
-<p>Our mission is to empower students with the knowledge and skills necessary to succeed in their academic and professional endeavors. At Paramount Coaching, we believe in fostering a strong learning environment that promotes holistic development</p>
+ <div class="fbox" id="lastfooter"><br>
+  <h3>CampusXchange</h3>
+<p>We are committed to building a dynamic learning ecosystem where learners read and create, build and grow. From expert-curated notes, to insider tips, to realtime tech assignments, and guided internship & mentorship programs, we help you go from theory to doing your life's best work. Whether you're a student who wants to conquer full-stack development, a freelancer who wants to refine SEO skills, or a startup who's looking for web help — CampusXchange is where you can begin and strategize to become smarter.</p>
    <br>
     <hr>
 </div>
-<br>
-     <div  id="quicklinks"><h2>Quick links</h2>
-        <a href="../Index.html">Home</a>      
-        <a href="../Handouts/Notes.html">Notes</a>
-        <a href="../Handouts/">Blogs</a>
-        <a href="../Handouts/Assignment.html">Programming Assignment</a>
-        <a href="Services/Webdevelopment.html">Website Development</a>
-        <a href="Services/SEO.html">SEO</a>
-        <a href="../Internship.html">Mentorship & Internship</a>
-        <a href="../About.html">About</a>
-        <a href="../Lettalk.html">Let's Talk</a>
-        
+     <h3>Quick Links-</h3>
+     <div  id="quicklinks">
+        <a href="#">Home</a>
+        <a href="#about-section">Notes</a>
+        <a href="#Courses-section">Blogs</a>
+        <a href="#Results-section">Assignment</a>
+        <a href="#Contact-section">Website Development</a>
+        <a href="#Contact-section">SEO</a>
+        <a href="#Contact-section">Internship</a>
+        <a href="#Contact-section">About us</a>
+        <a href="#Contact-section">Let's Talk</a>
+
       </div>
- 
-        </section>  
-        <!-- fotter section end  --------------------------------------------------------------------------------->  
+<br>
+<br>
+      <h3>Let's Connect!</h3>
+      <div class="contact">
+        <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-phone"></i></a> &nbsp;+91 9155726625
+        <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-envelope"></i></a> &nbsp;info@campusxchange.com
+        <br><a href="#Contact-section" title="Social Platform"><i class="fa-solid fa-location-dot"></i></a> &nbsp;Kishanganj ,Bihar(855115)
+      </div>
+
+      <div  id="Sociallinks">
+        <a href="#Courses-section" title="Social Platform"><i class="fa-brands fa-linkedin"></i></a>
+        <a href="#about-section" title="Social Platform"><i class="fa-brands fa-square-instagram"></i></a>
+        <a href="#Results-section" title="Social Platform"><i class="fa-brands fa-facebook"></i></a>
+        <a href="#Contact-section" title="Social Platform"><i class="fa-brands fa-youtube"></i></a>
+
+      </div>
+         <div  id="CopyRight">
+       Copyright ©2025 CampusXchange. All Rights Reserved Designed By CampusXchange Team
+      </div>
+
+
+        </section>
+        <!-- fotter section end  --------------------------------------------------------------------------------->
+
 <script src="../script.js"></script>
+   <script>
+            // for portfolio section slider .....................................................................
+  const slider = document.getElementById("slider");
+  const total = slider.children.length;
+  let currentIndex = 0;
+
+  const numberContainer = document.getElementById("numberContainer");
+
+  // Create numbered buttons
+  for (let i = 0; i < total; i++) {
+    const btn = document.createElement("span");
+    btn.classList.add("num-btn");
+    btn.textContent = i + 1;
+    if (i === 0) btn.classList.add("active");
+    btn.setAttribute("data-index", i);
+    btn.addEventListener("click", () => {
+      currentIndex = i;
+      updateSlider();
+    });
+    numberContainer.appendChild(btn);
+  }
+
+  function updateSlider() {
+    slider.style.transform = `translateX(-${currentIndex * 100}%)`;
+    document.querySelectorAll(".num-btn").forEach(btn => btn.classList.remove("active"));
+    document.querySelectorAll(".num-btn")[currentIndex].classList.add("active");
+  }
+
+  // Auto scroll
+  setInterval(() => {
+    currentIndex = (currentIndex + 1) % total;
+    updateSlider();
+  }, 2000);
+
+  // Swipe support for mobile only ...........................................................................................
+  const sliderBox = document.getElementById("sliderBox");
+  let startX = 0;
+
+  sliderBox.addEventListener("touchstart", (e) => {
+    startX = e.touches[0].clientX;
+  });
+
+  sliderBox.addEventListener("touchend", (e) => {
+    const endX = e.changedTouches[0].clientX;
+    const diff = startX - endX;
+
+    if (diff > 50) {
+      currentIndex = (currentIndex + 1) % total;
+    } else if (diff < -50) {
+      currentIndex = (currentIndex - 1 + total) % total;
+    }
+
+    updateSlider();
+  });
+
+
+      //POrtfolio  Response form validation .......................................................................................
+
+         </script>
 </body>
 </html>
